Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.5.2 - unreleased

        Rick Widmer
        - add support for Tom's get_domain_entries() function
          vdelolddomains, vpopbull, vdominfo and vpopmaild have 
          been updated.  vdotqmail2valias and vconvert have not 
          been updated to use this function because I can't test 
          them right now.
        - eliminate some 'comparison between signed and unsigned' 
          warnings in vpopmail.c
        - Patches 895348 and 936874 merged into cvs.

5.5.1 - unreleased

	Ken Jones
        - add support for system_admin privileges using
          new gid_flag SA_ADMIN.
        - beta version of vpopmaild for php applications.
	- Add SpamAssassin support for vdelivermail.
        - Increase max domain name size from 64 to 96. 
          The actual maximum length of a host name is 256.
        - vcdb.c: use open/read/close instead of stream based
          fopen/fread/fclose in vauth_getpw. Slightly more efficent.
        - file_lock.c change get_write_lock to use file descriptor
          instead of FILE *;
        - vpopmail.c: for locks, use open/close instead of fopen/fclose
        - vcdb.c: for locks, use open/close instead of fopen/fclose
        - vdelivermail.c: wait on pid for qmail-inject to finish
          before continuing in deliver_mail function.

	Michael Bowe
	- Minor documentation tweaks
	- Fix for : If roaming users were enabled, and auth module was not
	  SQL based, and user's IP address was not available (eg being
	  called from Courier-IMAP with authdaemon enabled), then
	  open_smtp.tmp.pid files would be created for each auth 
	  but never removed.

5.5.0 - released 11-Mar-04

	Tom Collins
	- Consolidate table creation code in vmysql.c and vpgsql.c.
	- Increase SQL_BUF_SIZE from 600 to 2048 for Oracle, Postgres
	  and Sybase.